[project]
name = "langchain-knowledgelib"
version = "0.1.0"
description = "LangChain retriever for knowledgelib.io — pre-verified, cited knowledge units for AI agents"
readme = "README.md"
license = { text = "CC-BY-SA-4.0" }
requires-python = ">=3.9"
authors = [
    { name = "knowledgelib.io", email = "hello@knowledgelib.io" },
]
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://knowledgelib.io"
Repository = "https://github.com/knowledgelib/knowledgelib.io"
Documentation = "https://knowledgelib.io/api"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "aioresponses>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_knowledgelib"]
